fix: resolve production CORS preflight failures by properly integrating CorsConfigurationSource with Spring Security